changed z-index on flashes + fixed sidebar overlaying footer on account settings

--- a/static/css/accountsettings.css
+++ b/static/css/accountsettings.css
@@ -34,6 +34,7 @@ body{
     flex-direction: column;
     align-items: center;
     box-sizing: border-box;
+    z-index: -1;
 }
 
 #sidebar-logo {
