--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -15,6 +15,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     padding: 25px;
     font-size: 20px;
+    z-index: 10000000;
 }
 
 .flash {
